--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "date-fns": "^2.28.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "sass": "^1.47.0"
