--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "date-fns": "^2.28.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
-    "sass": "^1.47.0"
+    "postcss": "^8.4.5",
+    "sass": "^1.47.0",
+    "tailwindcss": "^3.0.13"
   }
 }
