--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.7",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
